@@ -140,7 +140,8 @@ ifdef _cdbs_rules_debhelper
 
 DEB_DH_PYTHON_ARGS = $(addprefix -V ,$(DEB_PYTHON_COMPILE_VERSION)) $(DEB_DH_PYTHON_ARGS_ALL) $(DEB_DH_PYTHON_ARGS_$(cdbs_curpkg))
 
-$(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%:
+$(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%: binary-install-python:/%
+$(patsubst %,binary-install-python/%,$(DEB_PACKAGES)) :: binary-install-python:/%
 	dh_python -p$(cdbs_curpkg) $(DEB_DH_PYTHON_ARGS)
 endif
 
@@ -235,7 +236,8 @@ ifdef _cdbs_rules_debhelper
 
 DEB_DH_PYTHON_ARGS = $(DEB_DH_PYTHON_ARGS_ALL) $(DEB_DH_PYTHON_ARGS_$(cdbs_curpkg)) $(DEB_PYTHON_PRIVATE_MODULES_DIRS)
 
-$(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%:
+$(patsubst %,binary-install/%,$(DEB_PACKAGES)) :: binary-install/%: binary-install-python/%
+$(patsubst %,binary-install-python/%,$(DEB_PACKAGES)) :: binary-install-python/%:
 ifeq (pysupport, $(DEB_PYTHON_SYSTEM))
 	dh_pysupport -p$(cdbs_curpkg) $(DEB_PYTHON_PRIVATE_MODULES_DIRS)
 else
